--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -55,3 +55,6 @@ h6{
   font-size: 16px;
   font-weight: bold;
 }
+.btn{
+  @apply text-[15px] font-bold bg-[#00CCFF] text-white rounded-xl p-[15px];
+}
